feat: add fotter with git acc and date

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
 <body>
     <section class="center">
-        <h1 id="bogdan-gantu">Bogdan Gantu</h1>
+        <h1>Bogdan Gantu</h1>
     </section>
 
     <section class="center">
-        <h2 id="contact-info">Contact Info</h2>
+        <h2>Contact Info</h2>
         <p>Str. random nr.3&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             gantubogdan@gmail.com</p>
     </section>
 
     <section class="center">
-        <h2 id="summary">Summary</h2>
+        <h2>Summary</h2>
         <p>I want to learn to be a better developer work in a team with passionate people, and also learn the best
             practices
             of working in a team. I have studied programming in University and later better learned it by myself taking
@@ -28,8 +28,8 @@
     </section>
 
     <section class="center">
-        <h2 id="skills">Skills</h2>
-        <h3 id="programming-languages">Programming Languages</h3>
+        <h2>Skills</h2>
+        <h3>Programming Languages</h3>
         <p>Java</p>
         <ul class="center">
             <li>Worked with java for about half a year at a company.</li>
@@ -60,10 +60,10 @@
         </ul>
     </section>
     <section class="center">
-        <h2 id="code-examples">Code Examples</h2>
+        <h2>Code Examples</h2>
         <ul class="center">
             <li>
-                <h4 id="code-from-and-application-i-developed">Code from and application I developed</h4>
+                <h4 class="center">Code from and application I developed</h4>
                 <code>
                 private void InitializeGame(List<Card> cards, List<Player> players)
                     {
@@ -112,7 +112,7 @@
 
 
     <section class="center">
-        <h2 id="experience">Experience</h2>
+        <h2>Experience</h2>
         <ul class="center">
             <li>For my experience I have done some courses on <strong>Coursera</strong> and also
                 <strong>Plurasight</strong>
@@ -125,7 +125,7 @@
     </section>
 
     <section class="center">
-        <h2 id="education">Education</h2>
+        <h2>Education</h2>
         <ul class="center">
             <li>2013-2020 Bachelor degree from <strong>Politehnica University Timisoara</strong></li>
             <li>Jan 2020 - March 2020 <strong>SSI Schaefer</strong> coding school</li>
@@ -133,12 +133,20 @@
     </section>
 
     <section class="center">
-        <h2 id="english">English</h2>
+        <h2>English</h2>
         <ul class="center">
             <li>Learned english from kindergarden up until university and also the first year of university.</li>
             <li>In my final highschool exam I was awarded B2 in all categories(listening, understanding and writing).
             </li>
         </ul>
     </section>
+    <footer class="center">
+        <p>
+            <a class="center" href="https://github.com/EndAroundCarry/rsschool-cv">Github account</a>
+        </p>
+        <p>
+            Current Date: 27/11/2023
+        </p>
+    </footer>
 </body>
 </html>
