feat: add link to course logo

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
         <p>
             Current Date: 27/11/2023
         </p>
+        <a href="https://rs.school/js/"><img src="/javascipt.png" alt="Course Logo"></a>
     </footer>
 </body>
 </html>
